--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -633,8 +633,6 @@ hr {
 
 .callback-bt {
 	position: relative;
-	left: 120px;
-	top: 0;
 	background: $mainRed;
 	border-radius: 50%;
 	box-shadow: 0 8px 10px rgba(56, 163, 253, 0.3);
@@ -649,6 +647,11 @@ hr {
 	@media (max-width:$md4+px) {
 		display: none;
 	}
+}
+
+.callback-bt-1 {
+	left: 120px;
+	top: 0;
 }
 
 .callback-bt-2 {
@@ -667,7 +670,7 @@ hr {
 }
 
 .callback-bt-5 {
-	left: 270px;
+	right: -260px;
 	top: 170px;
 }
 
@@ -707,10 +710,8 @@ hr {
 .tooltipp .tooltipptext {
 	visibility: hidden;
 	display: block;
-	width: 260px;
 	bottom: 100%;
 	left: 50%;
-	margin-left: -130px;
 	background-color: $mainRed;
 	color: #fff;
 	text-align: center;
@@ -722,6 +723,11 @@ hr {
 }
 
 /* tooltipp text */
+.tooltipp .tooltipptext-1 {
+	width: 260px;
+	margin-left: -130px;
+}
+
 .tooltipp .tooltipptext-2 {
 	width: 260px;
 	margin-left: -130px;
@@ -739,7 +745,7 @@ hr {
 
 .tooltipp .tooltipptext-5 {
 	width: 210px;
-	margin-left: -110px;
+	margin-left: -10px;
 }
 
 .tooltipp .tooltipptext-6 {
@@ -965,4 +971,124 @@ th {
 
 tr:nth-child(even) {
 	background-color: #fff;
+}
+
+
+// товар =========================================
+
+.tovar {
+	padding: 100px 0;
+}
+
+.tovar__title {
+	text-align: center;
+	margin-bottom: 4px;
+}
+
+.tovar__sutitle {
+	font-weight: normal;
+	font-size: 16px;
+	line-height: 20px;
+	color: $mainGrey;
+	text-align: center;
+	margin-bottom: 27px;
+}
+
+.tovar__items {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.tovar__item {
+	max-width: 211px;
+	height: auto;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.tovar__img {
+	max-width: 211px;
+	height: 206px;
+	margin-bottom: 15px;
+}
+
+.tovar__prise {
+	font-size: 14px;
+	font-weight: 500;
+	margin-bottom: 7px;
+}
+
+.tovar__money {
+	font-size: 18px;
+	font-weight: 600;
+	margin-bottom: 20px;
+}
+
+.current {
+	font-size: 14px;
+	font-weight: 500;
+}
+
+// work ======================================
+.work {
+	background: url(../img/work-img.jpg) center center/cover no-repeat;
+	padding: 55px 0 100px 0;
+}
+
+.work__subtitle {
+	color: $mainWhite;
+	font-weight: 500;
+	font-size: 12px;
+	text-align: center;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	margin-bottom: 6px;
+}
+
+.work__title {
+	color: $mainWhite;
+	font-weight: 600;
+	font-size: 30px;
+	line-height: 37px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.text-red {
+	color: $mainRed;
+	margin-bottom: 10px;
+}
+
+.work__line {
+	position: relative;
+	border-bottom: 1px solid $mainRed;
+	width: 60px;
+	left: 50%;
+	margin-left: -30px;
+}
+
+// photo =======================================
+
+.photo {
+	margin-top: -70px;
+}
+
+.photo__items {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background-color: #ECF1F3;
+	box-shadow: 0px 7px 4px rgba(0, 0, 0, 0.05);
+	border-radius: 20px;
+	padding: 37px;
+	flex-wrap: wrap;
+}
+
+.photo__img {
+	width: 257px;
+	height: 177px;
+	margin-bottom: 20px;
 }
