--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,5 +1,20 @@
 footer {
+	background: #000;
+	padding: 18px 0;
 }
+
+.copy {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 18px;
+	text-align: center;
+	color: $mainWhite;
+
+	& a {
+		color: $mainWhite;
+	}
+}
+
 //====================================================================================================
 
 //====================================================================================================
