--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -93,7 +93,7 @@ body {
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 //@import "datepicker";
-//@import "lightgallery";
+@import "lightgallery";
 //@import "pagging";
 @import "popup";
 @import "header";
@@ -1073,16 +1073,13 @@ tr:nth-child(even) {
 // photo =======================================
 
 .photo {
-	margin-top: -70px;
+	margin: -70px 0 75px 0;
 }
 
 .photo__items {
-
 	background-color: #ECF1F3;
 	box-shadow: 0px 7px 4px rgba(0, 0, 0, 0.05);
 	border-radius: 20px;
-
-
 	padding: 37px;
 }
 
@@ -1095,8 +1092,105 @@ tr:nth-child(even) {
 }
 
 .photo__img {
+	position: relative;
 	width: 257px;
 	height: 177px;
 	margin-bottom: 10px;
+	transition: 0.3s;
 
+	&:hover::after {
+		position: absolute;
+		content: '';
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba(0, 0, 0, 0.5);
+		transition: 0.3s;
+	}
+
+}
+
+// table =====================================================
+.tablebox {
+	margin-bottom: 75px;
+}
+
+// cover =====================================================
+.cover {
+	position: relative;
+	padding: 60px 0;
+	background: url(../img/cover-bg.jpg) center center/cover no-repeat;
+	z-index: 1;
+}
+
+.cover-bg {
+	position: absolute;
+	content: '';
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.85);
+	z-index: -1;
+}
+
+.cover__title {
+	z-index: 5;
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.cover__items {
+	display: flex;
+	justify-self: center;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-bottom: 40px;
+}
+
+.cover__item {
+	width: 30%;
+	margin: 30px 15px;
+	flex-direction: column;
+	transition: all 0.3s ease 0s;
+
+	&:hover {
+		transform: translateY(-20px);
+		filter: brightness(100%) contrast(100%) saturate(150%) blur(0) hue-rotate(0deg);
+	}
+
+	@media (max-width:$md2+px) {
+		width: 40%;
+	}
+
+	@media (max-width:$md3+px) {
+		width: 100%;
+	}
+}
+
+.cover__img {
+	display: block;
+	margin: auto;
+	max-width: 140px;
+	height: 114px;
+	margin-bottom: 20px;
+}
+
+.cover__name-box {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 20px;
+	color: $mainColor;
+	text-align: center;
+}
+
+.button-cover {
+	display: block;
+	text-align: center;
+}
+
+.cover__btn {
+	display: inline-flex;
+	margin: 0 auto;
 }
