add slider sert

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1194,3 +1194,23 @@ tr:nth-child(even) {
 	display: inline-flex;
 	margin: 0 auto;
 }
+
+// slider ==========================================================
+.sertificat {
+	padding: 80px 0;
+}
+
+.sertificat__title {
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+.sertificat__slider {
+	margin-top: 40px;
+	display: flex;
+}
+
+.sert__slider {
+	height: 307px;
+	border: 2px solid #ececec
+}
