--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1198,6 +1198,7 @@ tr:nth-child(even) {
 // slider ==========================================================
 .sertificat {
 	padding: 80px 0;
+	// background-color: #000;
 }
 
 .sertificat__title {
@@ -1206,8 +1207,8 @@ tr:nth-child(even) {
 }
 
 .sertificat__slider {
+	position: relative;
 	margin-top: 40px;
-	display: flex;
 }
 
 .sert__slider {
