--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1201,6 +1201,10 @@ tr:nth-child(even) {
 	// background-color: #000;
 }
 
+.sertificat__slider {
+	position: relative;
+}
+
 .sertificat__title {
 	text-align: center;
 	margin-bottom: 10px;
@@ -1221,14 +1225,32 @@ tr:nth-child(even) {
 }
 
 /* Стрелки */
-.sertificat__slider .swiper-button-prev::after,
-.sertificat__slider .swiper-button-next::after {
+.swiper-button-prev::after,
+.swiper-button-next::after {
+	position: absolute;
+	content: '';
+	// top: 50%;
+	width: 50px;
+	height: 50px;
 	color: #000;
 	font-size: 80px;
+	background-color: #000;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+	position: absolute;
+	content: '';
+	// top: 50%;
+	width: 50px;
+	height: 50px;
+	color: #000;
+	font-size: 80px;
+	background-color: #000;
 }
 
 /* Пагинация */
-.sertificat__slider .swiper-pagination {
+.swiper-pagination {
 	bottom: 30px;
 }
 
