--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1224,29 +1224,50 @@ tr:nth-child(even) {
 	justify-content: center;
 }
 
-/* Стрелки */
-.swiper-button-prev::after,
-.swiper-button-next::after {
-	position: absolute;
-	content: '';
-	// top: 50%;
-	width: 50px;
-	height: 50px;
-	color: #000;
-	font-size: 80px;
-	background-color: #000;
+// contact ============================================
+.contacts {
+	padding: 60px 0;
 }
 
-/* Пагинация */
-.swiper-pagination {
-	bottom: 30px;
+.contacts__title {
+	text-align: center;
+	margin-bottom: 10px;
 }
 
-/* Буллеты */
-.sertificat__slider .swiper-pagination-bullet {
-	width: 20px;
-	height: 20px;
-	line-height: 20px;
-	font-size: 14px;
-	background-color: #000;
+.contacts__body {
+	margin-top: 60px;
+	display: flex;
+	align-items: center;
+}
+
+.contacts__items {
+	flex: 0 0 40%;
+}
+
+// .contacts__adress {
+// 	display: flex;
+// 	align-items: start;
+// }
+
+.contacts__map {
+	// display: block;
+	display: inline-flex;
+	height: 37px;
+	width: 24px;
+	margin-right: 15px;
+}
+
+.contacts__content {
+	display: flex;
+	flex-direction: column;
+}
+
+.contacts__subtitle {}
+
+.contacts__text {
+	// display: inline-flex;
+}
+
+.contacts__maps {
+	flex: 0 0 60%;
 }
