add block contact

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1238,19 +1238,27 @@ tr:nth-child(even) {
 	margin-top: 60px;
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 .contacts__items {
 	flex: 0 0 40%;
+	// display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+
+	@media (max-width:$md2+px) {
+		flex: 0 0 100%;
+	}
 }
 
-// .contacts__adress {
-// 	display: flex;
-// 	align-items: start;
-// }
+.contacts__adress {
+	display: flex;
+	align-items: flex-start;
+	margin-bottom: 30px;
+}
 
 .contacts__map {
-	// display: block;
 	display: inline-flex;
 	height: 37px;
 	width: 24px;
@@ -1262,12 +1270,39 @@ tr:nth-child(even) {
 	flex-direction: column;
 }
 
-.contacts__subtitle {}
+.contacts__subtitle {
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 20px;
+	color: $mainColor;
+	margin-bottom: 5px;
+}
 
 .contacts__text {
-	// display: inline-flex;
+	font-weight: normal;
+	font-size: 15px;
+	line-height: 18px;
+	color: $mainColor;
+}
+
+.cont-icon {
+	margin-right: 8px;
+
+	&:last-child {
+		margin-right: 0;
+	}
+}
+
+.contact__btn {
+	margin-top: 30px;
+	display: inline-block;
+	margin-bottom: 30px;
 }
 
 .contacts__maps {
 	flex: 0 0 60%;
+
+	@media (max-width:$md2+px) {
+		flex: 1 1 100%;
+	}
 }
